# api/docs/swagger.json
@@ -21,20 +21,34 @@
                     "dogs"
                 ],
                 "summary": "List all dogs",
+                "parameters": [
+                    {
+                        "maximum": 25,
+                        "minimum": 1,
+                        "type": "integer",
+                        "default": 25,
+                        "description": "Limit the number of dogs returned",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "A token to get the next page of results",
+                        "name": "nextToken",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Dog"
-                            }
+                            "$ref": "#/definitions/models.DogList"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/common.APIError"
+                            "$ref": "#/definitions/common.APIErrorResponse"
                         }
                     }
                 }
@@ -72,13 +86,13 @@
                     "400": {
                         "description": "Invalid request",
                         "schema": {
-                            "$ref": "#/definitions/common.APIError"
+                            "$ref": "#/definitions/common.APIErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/common.APIError"
+                            "$ref": "#/definitions/common.APIErrorResponse"
                         }
                     }
                 }
@@ -113,13 +127,13 @@
                     "404": {
                         "description": "Dog not found",
                         "schema": {
-                            "$ref": "#/definitions/common.APIError"
+                            "$ref": "#/definitions/common.APIErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/common.APIError"
+                            "$ref": "#/definitions/common.APIErrorResponse"
                         }
                     }
                 }
@@ -164,19 +178,19 @@
                     "400": {
                         "description": "Invalid request",
                         "schema": {
-                            "$ref": "#/definitions/common.APIError"
+                            "$ref": "#/definitions/common.APIErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Dog not found",
                         "schema": {
-                            "$ref": "#/definitions/common.APIError"
+                            "$ref": "#/definitions/common.APIErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/common.APIError"
+                            "$ref": "#/definitions/common.APIErrorResponse"
                         }
                     }
                 }
@@ -203,13 +217,13 @@
                     "404": {
                         "description": "Dog not found",
                         "schema": {
-                            "$ref": "#/definitions/common.APIError"
+                            "$ref": "#/definitions/common.APIErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/common.APIError"
+                            "$ref": "#/definitions/common.APIErrorResponse"
                         }
                     }
                 }
@@ -342,6 +356,14 @@
                 }
             }
         },
+        "common.APIErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "$ref": "#/definitions/common.APIError"
+                }
+            }
+        },
         "models.Dog": {
             "type": "object",
             "properties": {
@@ -358,6 +380,20 @@
                     "type": "string"
                 },
                 "photoUrl": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.DogList": {
+            "type": "object",
+            "properties": {
+                "dogs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Dog"
+                    }
+                },
+                "nextToken": {
                     "type": "string"
                 }
             }
